# Exploring-the-World-of-Books

./: README.md  books_and_reviews.ipynb  proposal_for_book_review.ipynb  pyproject.toml
src/book_review/: book_scraper.py  book_surprise.py  books_cleaning.py  books_eda.py  books_inference.py  books_scraper.py  books_summary.py  data_summary.py  eda.py
